getting pdf template starting to flesh out
