# src/controllers/getPdf.ts
@@ -1,15 +1,12 @@
-import { Get, Route } from 'tsoa';
+import { Body, Post, Route } from 'tsoa';
 import PDFFunctions from '../pdf/createPdf';
-
-interface GetPdfResponse {
-    pdf: Buffer;
-}
+import { GetPdfRequest, GetPdfResponse } from './types';
 
 @Route('getPdf')
 export default class PDFController {
-    @Get('/')
-    public async getPdf(): Promise<GetPdfResponse> {
+    @Post()
+    public async getPdf(@Body() requestBody: GetPdfRequest): Promise<Buffer> {
         const functions = new PDFFunctions();
-        return { pdf: await functions.createPdf() };
+        return await functions.createPdf();
     }
 }
